리캡챠 js파일 추가

--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,6 @@
 	</div>
 </div>
 <script src="/public/main.js"></script>
+<script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
 </body>
 </html>
